add name and discription to specs-config

--- a/specsview-config.yaml
+++ b/specsview-config.yaml
@@ -1,2 +1,4 @@
+name: "Test Catalogue 1"
+description: "Specifications for all the interfaces in the across the system X."
 specs-paths: 
 - "specs"
