--- a/spectacular-config.yaml
+++ b/spectacular-config.yaml
@@ -1,9 +1,2 @@
-name: "Test Catalogue 1"
-description: "Specifications for all the interfaces across system X."
-spec-files: 
-- file-path: "specs/example-template.yaml"
-- file-path: "specs/error-example.yaml"
-- repo: "pburls/specs-test2"
-  file-path: "specs/example-spec.yaml"
-- repo: "pburls/specs-test-no-access"
-  file-path: "specs/example-template.yaml"
+name: "Another Test Catalogue"
+description: "Test Catalogue with .yaml extension to test file extension preference."
