--- a/spectacular-config.yml
+++ b/spectacular-config.yml
@@ -1,9 +1,20 @@
-name: "Test Catalogue 1"
-description: "Specifications for all the interfaces across system X."
-spec-files: 
-- file-path: "specs/example-template.yaml"
-- file-path: "specs/error-example.yaml"
-- repo: "pburls/specs-test2"
-  file-path: "specs/example-spec.yaml"
-- repo: "pburls/specs-test-no-access"
-  file-path: "specs/example-template.yaml"
+spectacular: '0.1'
+catalogues:
+  testCatalogue1:
+    title: "Test Catalogue 1"
+    description: "Specifications for all the interfaces across system X."
+    interfaces:
+      interface1:
+        specFile:
+          filePath: "specs/example-template.yaml"
+      interface2:
+        specFile:
+          filePath: "specs/error-example.yaml"
+      interface3:
+        specFile:
+          filePath: "specs/example-spec.yaml"
+          repo: "pburls/specs-test2"
+      interface4:
+        specFile:
+          filePath: "specs/example-template.yaml"
+          repo: "pburls/specs-test-no-access"
