--- a/specs/example-template.yaml
+++ b/specs/example-template.yaml
@@ -10,4 +10,9 @@ tags:
     description: "Sample Resource description"
 paths: {}
 components:
-  schemas: {}
+  schemas: 
+    messageSchema2:
+      type: object
+      properties:
+        intProp1:
+          type: integer
