--- a/specs/example-template.yaml
+++ b/specs/example-template.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.1
 info:
   title: An empty API spec
-  version: "1.2.0-draft.1"
+  version: "1.2.0-draft"
   contact: 
     name: "The team name going to implement this spec"
     url: "https://github.com/test-owner/actual-api-implementation-repository"
